Add endpoint to get metrics of operations in images (#30)
This adds the `/operation/analyze/:operation` endpoint which is intended
to be called using the following values for operation:
        - "compare": Compares the characteristics of the two images.
        - "extract": Extracts the characteristics of an image
        - "classify": Classify whether the image can be melanoma.

As body this endpoint recieves an array with the blob names of the
images we want to get information from.
