# api.yml
@@ -12,7 +12,7 @@ paths:
   # /user/{idUser}/reminder/{lesionId}: # add reminder to user
   # /user/{idUser}/associate/{idPatient}: # associate two users
   # /user/{idUser}/share/{idUserToAssociate}/{lesionId}: # share user's lesion to another user
-  # /compare/{prevPhotoId}/{afterPhotoId}: # compare two photos
+  # /operation/analyze/{operation}: # compare two photos
   # /prediagnose: # prediagnose a photo
 
   /lesion:
@@ -256,6 +256,26 @@ paths:
         '400':
           $ref: "#/components/responses/BadRequest"
 
+  /operation/analyze/{operation}:
+    parameters:
+      - $ref: '#/components/parameters/operation'
+    get:
+      description: Gets the result of an operation under images
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/analyze'
+      responses:
+        '200':
+          description: The operation was done correctly
+        '404':
+          $ref: "#/components/responses/NotFound"
+        '401':
+          $ref: "#/components/responses/Unauthorized"
+
+
 components:
 
   parameters:
@@ -391,3 +411,8 @@ components:
           type: string
         lesionID:
           type: number
+    analyze:
+      type: object
+      properties:
+        ids:
+          type: array
